# opm-tpsa

./: CMakeLists.txt  CMakeLists_files.cmake  README.md  dune.module  opm-tpsa-prereqs.cmake
flow/: flow_blackoil_tpsa.cpp  flow_gaswater_dissolution_tpsa.cpp  flow_onephase_tpsa.cpp
opm/simulators/tpsa/: BlackOilModelTPSA.hpp  FaceProperties.cpp  FaceProperties.hpp  FacePropertiesTPSA.cpp  FacePropertiesTPSA.hpp  FacePropertiesTPSA_impl.hpp  FaceProperties_impl.hpp  FlowProblemTPSA.hpp  ISTLSolverTPSA.hpp  PreconditionerFactory7.cpp  TPSALinearSolverParameters.cpp  TTagFlowProblemTpsa.hpp  elasticitylocalresidualtpsa.hpp  elasticityprimaryvariables.hpp  setupPropertyTreeTPSA.cpp  setupPropertyTreeTPSA.hpp  tpsabaseproperties.hpp  tpsalinearizer.hpp  tpsamodel.hpp  tpsanewtonconvergencewriter.hpp  tpsanewtonmethod.hpp  tpsanewtonmethodparams.cpp  tpsanewtonmethodparams.hpp  vtktpsamodule.hpp  vtktpsaparams.cpp
opm/simulators/utils/: moduleVersion.cpp  moduleVersion.hpp
tests/: test_face_properties.cpp  test_materialstate.cpp
